<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextStreetName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/dialog_street_name"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextStreetCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/dialog_street_city"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextStreetLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/dialog_street_length"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextStreetYearFounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/dialog_street_year_founded"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextStreetDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/dialog_street_description"
        android:minHeight="48dp" />

</LinearLayout>